<resources>
    <string name="app_name">Snappy</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up">Dont have an account! Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="signup_error_message">Please Enter all 3 fields (Username, Password and EmailID)</string>
    <string name="signup_title_message">Oops! You missed something</string>
    <string name="error_message_login">Please enter Username and password</string>
    <string name="logout">Logout</string>
    <string name="empty_inbox_string">No Messages</string>
    <string name="empty_friends_string">No friends, Add Friends to Start</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="camera">Camera</string>
    <string name="external_storage_error">"There was a problem fetching external storage on your decide"</string>
    <string name="generalerror">"Sorry their was an error"</string>
    <string name="video_size_warning">"Selected Video Should be Less than 10 MB"</string>
    <string name="file_opening_error">There was a problem opening the file</string>
    <string name="file_size_exceed">The file size is over 10 MB</string>
    <string name="choose_friends_to_send_media">Choose some friends to send the photo</string>
    <string name="send_error">Something went wrong sending the message. Please try again</string>
    <string name="send_error_title">Sorry, something went wrong!</string>
    <string name="success_message">Message Sent</string>
    <string name="sending_message_error">There was an error sending your file. Please Try Again with another file</string>
    <string name="help_string"><![CDATA[
        1. Add new friends by going to editFriends. \n\n
        2. Start taking pictures/videos by clicking on camera button in app \n\n
        3. Or select photos or videos from your gallery. \n\n
        4. Select the recipients of the media and your snappy is sent!! \n\n
        For any further details contact us: help@snappy.com]]></string>
    <string-array name="camera_option">
        <item>Camera</item>
        <item>Video</item>
        <item>Choose Picture from Gallery</item>
        <item>Choose Video from Gallery</item>
    </string-array>


    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_edit_friend">Edit Friends</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_see_action_bar">SeeActionBar</string>
    <string name="title_activity_view_image">Snappy</string>
    <string name="subtitle_value">Share Photo/Video with your friends</string>
    <string name="item_help">Help</string>
</resources>
