<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/logout"
          android:title="@string/logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_edit_friends"
        android:title="@string/menu_edit_friends_label"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_help"
          android:title="@string/item_help"
          android:orderInCategory="100"
          app:showAsAction="never"
        />
    <item android:id="@+id/action_camera"
          android:icon="@drawable/iconcamera"
          android:title="@string/camera"
        app:showAsAction="always"/>
</menu>
